--- a/index.html
+++ b/index.html
@@ -783,6 +783,7 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="api-client.js"></script>
+<script src="voice-engine.js"></script>
 <script src="backend-bridge.js"></script>
 <script src="auth.js"></script>
 <script src="nexus-sdk.js"></script>
