Major cleanup: remove hardcoded servers, fix members list, clean UI
- Remove hardcoded server icons from index.html (Nexus HQ, Gaming, Music, Dev, Art, Streamer Hub)
- Server nav is now fully dynamic — populated by renderServerList() from backend data
- Remove hardcoded twitch-hub server from app.js servers object
- Fix renderMembers() to use actual server members from backend, not all cached users
- Filter out bot users from members list
- Remove twitch-hub from server settings check
- Welcome landing now properly shows when user has no servers
- After login, first real backend server is selected (not hardcoded twitch-hub)

--- a/index.html
+++ b/index.html
@@ -513,17 +513,9 @@
       <svg width="26" height="26" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12c0 1.82.49 3.53 1.34 5L2 22l5-1.34C8.47 21.51 10.18 22 12 22c5.52 0 10-4.48 10-10S17.52 2 12 2zm-2 13l-3-3 1.41-1.41L10 12.17l5.59-5.59L17 8l-7 7z"/></svg>
     </div>
     <div class="server-separator"></div>
-    <div class="server-icon server-item" data-tooltip="Nexus HQ" data-server="nexus-hq" onclick="switchServer('nexus-hq')" style="background:linear-gradient(135deg,#0ea5e9,#06d6a0);">
-      <span style="color:#fff;font-size:16px;">N</span>
-      <span class="badge">3</span>
-    </div>
-    <div class="server-icon server-item" data-tooltip="Gaming Lounge" data-server="gaming" onclick="switchServer('gaming')">🎮</div>
-    <div class="server-icon server-item" data-tooltip="Music Vibes" data-server="music" onclick="switchServer('music')">🎵</div>
-    <div class="server-icon server-item" data-tooltip="Dev Hub" data-server="devhub" onclick="switchServer('devhub')">⚡</div>
-    <div class="server-icon server-item" data-tooltip="Art Studio" data-server="art" onclick="switchServer('art')">🎨</div>
+    <!-- Dynamic servers inserted here by renderServerList() -->
     <div class="server-separator"></div>
     <div class="server-icon add-server" data-tooltip="Create a Space" onclick="openServerWizard()">+</div>
-    <div class="server-icon server-item" data-tooltip="Streamer Hub" data-server="twitch-hub" onclick="switchServer('twitch-hub')" style="background:#9146FF;">📺</div>
     <div class="server-separator"></div>
     <div class="server-icon discover-btn" data-tooltip="Explore Public Spaces">🧭</div>
   </nav>
